# colombian-grid

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
docs/: index.md  mkdocs.yml
docs/docs/: index.md
src/colombian_grid/core/base/interfaces/paratec/: generators.py  hydrology.py  transmission.py  utils.py
src/colombian_grid/core/paratec/: paratec.py
src/core/: entities.py  use_cases.py
src/core/base/interfaces/paratec/: generators.py
src/core/infra/http/httpx/: async_client.py  sync_client.py
src/core/paratec/: paratec.py
src/entrypoints/: cli.py
src/infra/db/: db.py
src/infra/http/: client.py
src/interfaces/: data_sources.py  repositories.py
src/tests/: test_data_sources.py  test_repositories.py  test_use_cases.py
tests/httpx/: test_async_client.py
