[project]
name = "colombian-grid"
version = "0.0.1"
description = "Code to extract-process and post the currently available colombian grid from public data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx==0.28.1",
]

[dependency-groups]
dev = [
    "debugpy==1.8.13",
    "pre-commit==4.2.0",
    "pytest==8.3.5",
    "pytest-cov==6.0.0",
]
