[project]
name = "colombian-grid"
version = "0.0.1"
description = "Extract and process the currently available colombian grid public data"
readme = "README.md"
license = "LICENSE"
authors = [
    { name = "Camilo Camargo", email = "kamilo1494@gmail.com" }
]
maintainers = [
    { name = "Camilo Camargo", email = "kamilo1494@gmail.com" }
]
keywords = ["colombian", "grid", "extraction", "digitalization"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
]
requires-python = ">=3.11"
dependencies = [
    "httpx==0.28.1",
    "pydantic==2.10.6",
]

[dependency-groups]
dev = [
    "debugpy==1.8.13",
    "pre-commit==4.2.0",
    "pytest==8.3.5",
    "pytest-cov==6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
